--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,7 @@
 @use './colors.scss' as *;
 @import './utils/colors.utilities.scss';
 @import './utils/typography.utilities.scss';
+@import '../../node_modules/normalize.css/normalize.css';
 
 :root {
   --color-white: #{$white};
@@ -58,8 +59,14 @@
 html,
 body,
 div#__next {
+  scroll-behavior: smooth;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 html {
@@ -79,17 +86,9 @@ html {
 }
 
 body {
-  background: #f7f3ff;
-  font-family: 'Poppins', sans-serif;
+  background: #000111;
+  font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
-}
-
-body,
-input,
-textarea,
-button,
-a {
-  font-family: 'Poppins', sans-serif;
 }
 
 button {
@@ -98,9 +97,4 @@ button {
 
 a {
   text-decoration: none;
-}
-
-.tableOptionList {
-  display: flex;
-  gap: 0.5rem;
 }
