--- a/src/components/Greetings/styles.module.scss
+++ b/src/components/Greetings/styles.module.scss
@@ -5,5 +5,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: colors.$white;
+  color: colors.$primary;
+
+  width: 100%;
+  height: 100vh;
 }
