--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,53 +1,23 @@
 @use './breakpoints';
-@use './colors.scss' as *;
+@use './colors.scss';
 @import './utils/colors.utilities.scss';
 @import './utils/typography.utilities.scss';
 @import '../../node_modules/normalize.css/normalize.css';
 
 :root {
-  --color-white: #{$white};
-  --color-gray50: #{$gray50};
-  --color-gray150: #{$gray150};
-  --color-gray200: #{$gray200};
-  --color-gray300: #{$gray300};
-  --color-gray500: #{$gray500};
-  --color-gray700: #{$gray700};
-  --color-gray900: #{$gray900};
-  --color-purpleExtraLight: #{$purpleExtraLight};
-  --color-purpleLight: #{$purpleLight};
-  --color-purple: #{$purple};
-  --color-purpleDark: #{$purpleDark};
-  --color-green: #{$green};
-  --color-greenDark: #{$greenDark};
-  --color-blue: #{$blue};
-  --color-blueDark: #{$blueDark};
-  --color-orange: #{$orange};
-  --color-orangeDark: #{$orangeDark};
-  --color-pink: #{$pink};
-  --color-red: #{$red};
-  --color-redDark: #{$redDark};
-  --color-gradient: #{$gradient};
+  --color-white: {$white};
 
-  --primary: #{$purple};
-  --secondary: #{$gray300};
-  --info: #{$blue};
-  --warning: #{$orange};
-  --error: #{$red};
-  --success: #{$green};
+  --color-green: {$green};
+  --color-blue: {$blue};
+  --color-orange: {$orange};
+  --color-red: {$red};
 
-  --bg-color: #{$purpleExtraLight};
-  --layer-1: #{$white};
-  --layer-2: #{$gray150};
-
-  --highlight: #{$purpleLight};
-
-  --bg-text-color: #{$gray700};
-  --layer-1-text-color: #{$gray700};
-  --layer-2-text-color: #{$gray500};
-
-  --bg-hx-color: #{$gray500};
-  --layer-1-hx-color: #{$gray500};
-  --layer-2-hx-color: #{$gray700};
+  --primary: {$white};
+  --secondary: {$black};
+  --info: {$blue};
+  --warning: {$orange};
+  --error: {$red};
+  --success: {$green};
 }
 
 * {
@@ -61,12 +31,8 @@ body,
 div#__next {
   scroll-behavior: smooth;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 html {
@@ -97,4 +63,5 @@ button {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
